--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/Importar.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/Importar.cshtml
@@ -32,13 +32,13 @@
                 <div class="col-24 col-md-12">
                     <div class="form-group">
                         <label for="nome" class="form-label">@T("Nome Completo")</label>
-                        <input type="text" class="form-control" required name="Nome" id="nome" placeholder="@T("Digite o nome do responsavel pela contratação")" value="Rafael Teste">
+                        <input type="text" class="form-control" required name="Nome" id="nome" placeholder="@T("Digite o nome do responsavel pela contratação")" value="">
                     </div>
                 </div>
                 <div class="col-24 col-md-12">
                     <div class="form-group">
                         <label for="email" class="form-label">E-mail</label>
-                        <input type="email" class="form-control" required name="Email" id="email" placeholder="@T("Digite o e-mail do responsável")" value="rafael.castanho@vm2.com.br">
+                        <input type="email" class="form-control" required name="Email" id="email" placeholder="@T("Digite o e-mail do responsável")" value="">
                     </div>
                 </div>
             </div>
@@ -50,19 +50,19 @@
                 <div class="col-24 col-md-10 col-lg-8">
                     <div class="form-group">
                         <label for="propostaComercial" class="form-label">@T("Proposta Comercial")</label>
-                        <input type="text" class="form-control" required name="PropostaComercial" id="propostaComercial" placeholder="@T("Digite o número da sua Proposta")" value="teste">
+                        <input type="text" class="form-control" required name="PropostaComercial" id="propostaComercial" placeholder="@T("Digite o número da sua Proposta")" value="">
                     </div>
                 </div>
                 <div class="col-24 col-md-10 col-lg-8">
                     <div class="form-group">
                         <label for="numeroBooking" class="form-label">@T("Número do Booking")</label>
-                        <input type="text" class="form-control" required name="NumeroBooking" id="numeroBooking" placeholder="@T("Digite o número do Booking")" value="5698">
+                        <input type="text" class="form-control" required name="NumeroBooking" id="numeroBooking" placeholder="@T("Digite o número do Booking")" value="">
                     </div>
                 </div>
                 <div class="col-24 col-md-10 col-lg-8">
                     <div class="form-group">
                         <label for="numeroBl" class="form-label">@T("Número do BL")</label>
-                        <input type="text" class="form-control" required name="NumeroBL" id="numeroBl" placeholder="@T("Digite o número do BL")" value="515a">
+                        <input type="text" class="form-control" required name="NumeroBL" id="numeroBl" placeholder="@T("Digite o número do BL")" value="">
                     </div>
                 </div>
             </div>
@@ -118,14 +118,14 @@
                 <div class="col-24 col-sm-12 col-lg-8 col-xl-6">
                     <div class="form-group">
                         <label for="cnpj" class="form-label">CNPJ</label>
-                        <input type="text" class="form-control" required name="CNPJ" id="cnpj" onblur="validarCNPJ()" placeholder="@T("Digite o CNPJ")" value="63.486.002/0001-52" />
+                        <input type="text" class="form-control" required name="CNPJ" id="cnpj" onblur="validarCNPJ()" placeholder="@T("Digite o CNPJ")" value="" />
                     </div>
                 </div>
                 <div class="col-24 col-sm-10 col-md-8 col-lg-6">
                     <div class="form-group">
                         <label for="cep" class="form-label">@T("CEP")</label>
                         <div class="input-group">
-                            <input type="text" class="form-control" required id="cep" name="CEP" placeholder="00000-000" value="18047-800" />
+                            <input type="text" class="form-control" required id="cep" name="CEP" placeholder="00000-000" value="" />
                             <div class="input-group-append">
                                 <button class="btn btn-outline" id="btnBuscaCEP" type="button">
                                     <span class="icon icon-search"></span>
