--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/Exportar.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/Exportar.cshtml
@@ -24,7 +24,7 @@
                 <div class="col-24 col-md-12">
                     <div class="form-group">
                         <label for="" class="form-label">@T("Nome Completo")</label>
-                        <input type="text" class="form-control" required name="Nome" id="Nome" placeholder="@T("Digite o nome do responsavel pela contratação")">
+                        <input type="text" class="form-control" required name="Nome" id="Nome" placeholder="@T("Digite o nome do responsável pela contratação")">
                     </div>
                 </div>
                 <div class="col-24 col-md-12">
@@ -72,6 +72,7 @@
                                     <span class="sr-only">@T("Pesquisar")</span>
                                 </button>
                             </div>
+                            <label id="CEP-error" class="is-invalid invalidCepJQ" for="CEP">O campo é obrigatório</label>
                         </div>
                     </div>
                 </div>
