--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptExportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptExportarCarga.cshtml
@@ -64,6 +64,7 @@
                         $("#Comentario").val('');
                         $("#DataColeta").val('');
                         $("#Equipamento").val('');
+                        $("#Reefer").prop('checked', false);
                         $(".btnAgendarJQ").fadeIn("slide");
                     }
                     else {
