--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ExportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ExportarCarga.cshtml
@@ -1,5 +1,7 @@
 ﻿@model MLAgendamentoIntermodal
 @{
+    var hora = DateTime.Now.Hour;
+    var minuto = DateTime.Now.Minute;
 }
 
 <form class="form" id="FormCarga">
@@ -11,13 +13,13 @@
                     <div class="col-24 col-sm-12 col-md-8 col-lg-7 col-xl-8">
                         <div class="form-group">
                             <label for="" class="form-label">@T("Data e hora da Coleta")</label>
-                            <input type="datetime-local" min="@DateTime.Now.ToString("yyyy-MM-dd")T00:00" id="DataColeta" name="DataColeta" required class="form-control" placeholder="@T("Digite o número da sua Proposta")">
+                            <input type="datetime-local" min="@DateTime.Now.ToString("yyyy-MM-dd")T@(hora):@(minuto)" pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}"  id="DataColeta" name="DataColeta" required class="form-control" placeholder="@T("Digite o número da sua Proposta")">
                         </div>
                     </div>
                     <div class="col-24 col-sm-12 col-md-5 col-lg-6 col-xl-6">
                         <div class="form-group">
                             <label for="" class="form-label">@T("Peso (kg)")</label>
-                            <input type="number" id="Peso" name="Peso" min="1" class="form-control" required placeholder="@T("Peso")">
+                            <input type="number" id="Peso" name="Peso" min="0" max="9999" maxlength="5" class="form-control" required placeholder="@T("Peso")">
                         </div>
                     </div>
                     <div class="col-16 col-sm-12 col-md-7 col-lg-7 col-xl-6">
@@ -51,7 +53,7 @@
                     <div class="col-24">
                         <div class="form-group">
                             <label for="" class="form-label">@T("Comentario")</label>
-                            <textarea id="Comentario" class="form-control" name="Comentario" rows="4"></textarea>
+                            <textarea id="Comentario" class="form-control" name="Comentario" maxlength="300" rows="4"></textarea>
                         </div>
                     </div>
                 </div>
