--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ExportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ExportarCarga.cshtml
@@ -13,7 +13,7 @@
                     <div class="col-24 col-sm-12 col-md-8 col-lg-7 col-xl-8">
                         <div class="form-group">
                             <label for="" class="form-label">@T("Data e hora da Coleta")</label>
-                            <input type="datetime-local" min="@DateTime.Now.ToString("yyyy-MM-dd")T@(hora):@(minuto)" pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}"  id="DataColeta" name="DataColeta" required class="form-control" placeholder="@T("Digite o número da sua Proposta")">
+                            <input type="datetime-local" min="@DateTime.Now.ToString("yyyy-MM-dd")T@(hora):@(minuto)"  id="DataColeta" name="DataColeta" class="form-control" placeholder="@T("Digite o número da sua Proposta")">
                         </div>
                     </div>
                     <div class="col-24 col-sm-12 col-md-5 col-lg-6 col-xl-6">
