--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ExportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ExportarCarga.cshtml
@@ -43,7 +43,7 @@
                             </select>
                         </div>
                     </div>
-                    <div class="col-8 col-sm-12 col-md-4 col-lg-4 col-xl-4 d-flex align-items-end">
+                    <div class="col-8 col-sm-12 col-md-4 col-lg-4 col-xl-4 d-flex align-items-end form-top-btn">
                         <div class="form-group">
                             <label for="" class="form-check">@T("Reefer")
                                 <input type="checkbox" id="Reefer" name="Reefer"><span class="checkmark"></span>
