--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ImportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ImportarCarga.cshtml
@@ -2,6 +2,9 @@
 @{
     var portal = BLPortal.Atual;
     var urlUpload = "/cms/" + portal.Diretorio + "/AgendamentoIntermodal/uploadArquivos";
+
+    var hora = DateTime.Now.Hour;
+    var minuto = DateTime.Now.Minute;
 }
 
 
@@ -43,7 +46,7 @@
             <div class="col-24 col-sm-12 col-xl-6">
                 <div class="form-group">
                     <label for="dataEntrega" class="form-label">Data e hora da Entrega</label>
-                    <input type="datetime-local" min="@DateTime.Now.ToString("yyyy-MM-dd")T00:00" class="form-control" id="dataEntrega" name="DataEntrega" placeholder="">
+                    <input type="datetime-local" class="form-control datetime" id="dataEntrega" name="DataEntrega" placeholder="">
                 </div>
             </div>
             <div class="col-24 col-sm-12 col-xl-6" id="divNfContainerNf">
