ajuste data hora validação

--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ImportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ImportarCarga.cshtml
@@ -46,7 +46,7 @@
             <div class="col-24 col-sm-12 col-xl-6">
                 <div class="form-group">
                     <label for="dataEntrega" class="form-label">Data e hora da Entrega</label>
-                    <input type="datetime-local" class="form-control datetime" id="dataEntrega" name="DataEntrega" placeholder="">
+                    <input type="datetime-local" min="@DateTime.Now.ToString("yyyy-MM-ddT00:00")" id="dataEntrega" name="DataEntrega" class="form-control" placeholder="@T("Informe a data de entrega")">
                 </div>
             </div>
             <div class="col-24 col-sm-12 col-xl-6" id="divNfContainerNf">
